<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/room_button"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:id="@+id/room_button" />

        <Button
            android:text="@string/wifi_button"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:id="@+id/show_wifi_button" />

        <Button
            android:text="@string/ssid_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bssid_button" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/display" />
    </ScrollView>

</LinearLayout>