<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/predict_place"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:text="@string/placename"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="30sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_weight="0.41" />

            <Button
                android:text="@string/button_text"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:id="@+id/scan_button"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:id="@+id/radioButtonGroup">

                <RadioButton
                    android:text="@string/noUsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioid1"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/using"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioid2"
                    android:layout_weight="1" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="43dp"
                app:srcCompat="@drawable/pen2"
                android:id="@+id/imageView10" />

            <Button
                android:text="@string/makeTdata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/make_train_data"
                android:layout_weight="1"
                android:textIsSelectable="false"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="49dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/android"
                android:id="@+id/imageView8" />

            <Button
                android:text="@string/predict"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:id="@+id/predict_button"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/trash_box"
                android:id="@+id/imageView9" />

            <Button
                android:text="@string/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delete_button"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/database"
                android:id="@+id/imageView7"
                android:layout_weight="0.38" />

            <Button
                android:text="@string/db_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_db"
                android:textSize="24sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="9dp"
                android:layout_marginEnd="9dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/output"
            android:layout_weight="0.77"
            android:textSize="36sp"
            android:gravity="center" />

    </LinearLayout>

</RelativeLayout>
